# full-stack-scaffolding

./: .cursorignore  .env  .env.docker.example  .gitignore  DEPLOYMENT_GUIDE.md  README.md  build-production.sh  build-staging.sh  docker-compose.yml  start-dev.sh
.cursor/rules/: backend-conventions.mdc  backend.mdc  common.mdc  frontend-conventions.mdc  frontend.mdc  project-conventions.mdc
.github/workflows/: ci.yml  deploy-production.yml  deploy-staging.yml
backend/: .env.example  .gitignore  .pdm-python  README.md  alembic.ini  pyproject.toml  requirements.txt  start.sh
backend/alembic/: README.txt  env.py  script.py.mako
backend/alembic/versions/: 1a11f925645d_debug_metadata_with_logging.py  26d326f2c072_test_fresh_init.py  5af1e72cfe45_test_async_support.py  a015f203cf2b_test_load_db_url_from_app.py  a6fef5e8ce78_new_revision.py  b3f92c503bd7_test_add_target_metadata.py  b9d904dbc101_add_nickname_avatar_roles_permissions_.py  cc50d6de3b0f_test_batch_and_template_args.py
backend/app/: db_init.py  main.py
backend/app/api/: deps.py
backend/app/api/v1/: __init__.py  router.py
backend/app/api/v1/endpoints/: __init__.py  auth.py  todos.py  users.py
backend/app/apis/v1/: __init__.py
backend/app/apis/v1/endpoints/: auth.py
backend/app/core/: config.py  config_loader.py  db.py  deps.py  exceptions.py  redis_client.py  security.py
backend/app/crud/: base.py  user.py
backend/app/langchain_module/: llm.py  utils.py
backend/app/models/: __init__.py  base.py  todo.py  user.py
backend/app/repositories/: todo_repository.py  user_repository.py
backend/app/schemas/: __init__.py  base.py  todo.py  token.py  user.py
backend/app/services/: db.py  todo_service.py  user_service.py
backend/app/worker/: celery_app.py  tasks.py
backend/deploy/: README.md  fastapi-app-staging.service  fastapi-app.service  fix-env.py  install-service.sh
backend/migrations/: env.py
backend/scripts/: README.md  download_static_files.py  gen_secrets.py  initial_data.py  lint.sh  run_dev.sh  run_tests.sh  setup_env_files.py
backend/tests/: conftest.py  test_health.py  test_main.py
docs/: DEPLOYMENT_GUIDE.md  README.md
docs/backend/: ENVIRONMENT.md  GUIDE.md  README.md
docs/common/: DEPLOYMENT.md  WORKFLOW.md
docs/frontend/: ENVIRONMENT.md  GUIDE.md  README.md
frontend/: .env  .env.development  .env.example  .env.production  .env.staging  .eslintrc.cjs  .gitignore  .npmrc  .prettierrc.json  Dockerfile  README.md  components.d.ts  index.html  nginx.conf  package.json  pnpm-lock.yaml  tsconfig.json  tsconfig.node.json  uno.config.ts  vite.config.ts
frontend/public/: robots.txt
frontend/src/: App.vue  main.ts  router.ts  store.ts  vite-env.d.ts  vitest.setup.ts
frontend/src/components/: README.md
frontend/src/components/common/: README.md
frontend/src/composables/: useAuth.ts  useTodos.ts
frontend/src/core/composables/: index.ts
frontend/src/core/layouts/: AuthLayout.vue  DefaultLayout.vue
frontend/src/core/services/: apiClient.ts
frontend/src/core/types/: global.types.ts
frontend/src/core/ui/: NotFoundPage.vue  UserActionsMenu.vue
frontend/src/core/utils/: index.ts
frontend/src/features/auth/: index.ts  routes.ts  service.ts  store.ts  types.ts
frontend/src/features/auth/__tests__/: auth.store.spec.ts
frontend/src/features/auth/components/: LoginForm.vue  RegisterForm.vue
frontend/src/features/auth/components/__tests__/: LoginForm.spec.ts  RegisterForm.spec.ts
frontend/src/features/auth/views/: LoginView.vue  RegisterView.vue  UserProfileView.vue
frontend/src/features/auth/views/__tests__/: LoginView.spec.ts  RegisterView.spec.ts
frontend/src/features/dashboard/: index.ts  routes.ts
frontend/src/features/dashboard/views/: DashboardView.vue
frontend/src/features/home/: index.ts
frontend/src/features/home/views/: HomeView.vue
frontend/src/features/user-profile/: index.ts  routes.ts  service.ts  store.ts  types.ts
frontend/src/features/user-profile/views/: UserProfileView.vue
frontend/src/hooks/: useAuth.ts  useTodos.ts
frontend/src/layouts/: MainLayout.vue
frontend/src/pages/auth/: login.vue  register.vue
frontend/src/pages/error/not-found/: index.vue
frontend/src/pages/home/: index.vue
frontend/src/pages/profile/: index.vue
frontend/src/pages/todo/: index.vue
frontend/src/pages/todo/components/: TodoItem.vue
frontend/src/router/: index.ts
frontend/src/services/: api.ts  todo.ts  user.ts
frontend/src/stores/: auth.ts  todos.ts
frontend/src/styles/: _variables.scss  index.scss  main.scss
frontend/src/styles/abstracts/: _mixins.scss  _variables.scss
frontend/src/styles/base/: _animations.scss  _globals.scss  _reset.scss  _typography.scss
frontend/src/styles/components/: _buttons.scss  _cards.scss  _element-plus.scss  _forms.scss
frontend/src/styles/themes/: _dark.scss
frontend/src/types/: components.d.ts  element-plus.d.ts  todo.ts  user.ts
frontend/src/utils/: dateFormat.ts  storage.ts
scripts/: build-all.sh  start-dev.sh
temp_alembic_test/: alembic.ini
